fix gap

--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -186,7 +186,7 @@
   justify-content: center;
   align-items: center;
   /* DESKTOP GAP */
-  gap: 150px;
+  gap: 130px;
   width: 0;
   height: 100vh;
   opacity: 0;
